Update dependencies and JDK to 21